# wax-labs-ui

./: .editorconfig  .env  .env.local  .env.production  .env.test  .env.testnet  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.json  README.md  config-overrides.js  default.env  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
deployment/nginx/: labs.wax.eosdetroit.io.conf
docs/: api_deployment.md  mermaid.mermaid  proposals.md
notifications/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
notifications/confs/container/: wax_labs_v3.network  wax_labs_v3_app.container  wax_labs_v3_pg.container  wax_labs_v3_pg.volume
notifications/confs/nginx/: wax_labs_v3_api.conf
notifications/src/cli/: __init__.py  __main__.py  creators.py
notifications/src/notifications/: __init__.py  container.py  main.py  settings.py
notifications/src/notifications/bot/: bot.py  main.py  serve.py  utils.py
notifications/src/notifications/bot/handlers/: __init__.py  callbacks.py  help.py  inline_query.py  status.py  subscribe.py  subscribed_to.py
notifications/src/notifications/bot/handlers/callback_data/: help.py  start.py  stop.py
notifications/src/notifications/bot/handlers/inline/: __init__.py  inline_query.py  ping.py
notifications/src/notifications/bot/handlers/pm/: __init__.py  help.py  start.py  status.py  stop.py  subscribe.py  subscribed_to.py  unsubscribe.py
notifications/src/notifications/core/config/: __init__.py  exception_handlers.py  listeners.py  logger.py  middleware.py  templates.py
notifications/src/notifications/core/exceptions/: __init__.py  unique.py
notifications/src/notifications/core/models/: abstract.py
notifications/src/notifications/core/repository/: __init__.py  database.py
notifications/src/notifications/core/schemas/: base.py  common.py
notifications/src/notifications/core/services/: __init__.py  base_service.py
notifications/src/notifications/core/services/emails/: abstract_email_sender.py  local_email_sender.py  ses_email_sender.py
notifications/src/notifications/core/utils/: exceptions.py  parse.py  templates.py
notifications/src/notifications/handlers/: __init__.py  bot.py  proposals.py
notifications/src/notifications/interfaces/: base_service.py  proposal_service.py  subscription_service.py  user_service.py
notifications/src/notifications/migrations/: env.py
notifications/src/notifications/migrations/versions/: 3539f2563d0f_.py  530d4c301abf_.py  71b459df86bc_.py  a4623d1d6d0b_.py  a50a029f627d_.py  c97287126e12_.py  cff1bcd0f04c_.py
notifications/src/notifications/models/: account.py  proposals.py
notifications/src/notifications/notification_bot/: bot.py  chain.py  exception_handler.py  models.py  proposal.py  serve.py  storage.py
notifications/src/notifications/notification_bot/handlers/: callbacks.py  help.py  inline_query.py  start.py  status.py  subscribe.py  subscribed_to.py
notifications/src/notifications/schemas/: proposal_status.py  subscription.py  users.py
notifications/src/notifications/services/: listener.py  proposal.py  subscription.py  users.py
notifications/src/notifications/templates/bot/: help_message.html.jinja2
notifications/src/notifications/wax_interface/: chain.py  utils.py
notifications/src/notifications/wax_interface/queries/: __init__.py  profile.py  proposals.py
notifications/src/notifications/wax_interface/schemas/: profile.py  proposal.py  types.py  wax_proposal.py
public/: index.html  manifest.json
src/: App.css  App.js  App.scss  App.tsx  constants.ts  index.js  index.scss  main.tsx  route.tsx  serviceWorker.js
src/api/: instance.ts  notifications.ts
src/assets/: PAD - Consultant Agreement (GC Draft)-DTTREV000.docx
src/components/: AdminProposalBar.tsx  AppBar.tsx  Button.tsx  Editor.tsx  Footer.tsx  Header.tsx  Input.tsx  InputFile.tsx  Link.tsx  Nav.tsx  ProfileCardSkeleton.tsx  Proposal.tsx  StatusTag.tsx  TextArea.tsx  ToggleField.tsx  USDRequestedForm.tsx  VotingPeriodForm.tsx
src/contents/: ContentSkeleton.tsx  Home.tsx  ProposalDetail.tsx  ProposalForm.tsx  Proposals.tsx
src/contexts/: adminProposalBar.ts  chain.ts  config.ts  notifications.ts  toast.ts
src/hooks/: useActionsBar.ts  useAdminProposalBar.ts  useChain.ts  useConfig.ts  useConfigData.ts  useDeliverables.ts  useIsAdmin.ts  useNotifications.ts  useProfile.ts  useProposalFilter.ts  useSingleProposal.ts  useToast.ts
src/i18n/: index.ts
src/icons/: AdminIcon.js  ArrowIcon.js  BalanceIcon.js  BellIcon.js  CategoriesIcon.js  DeliverablesToReviewIcon.js  DiscordIcon.js  MyProposalsIcon.js  PortalIcon.js  ProfileIcon.js  ProposalIcon.js  RemoveProfileIcon.js  ReviewProposalIcon.js  RightArrowIcon.js  RingingBellIcon.js  SwitchArrow.js  TelegramIcon.js  TransferRoleIcon.js  TwitterIcon.js  VotingPeriodIcon.js
src/layouts/: AppLayout.tsx  ProfileLayout.tsx  ProposalFormLayout.tsx  SettingsLayout.tsx
src/mappings/: baseGenerator.ts  sortByMapping.ts  statusFilterMapping.ts  whoseFilterMapping.ts
src/pages/: AccountPortal.js  AccountPortal.scss  AdminPortal.js  Deliverables.js  ErrorPage.js  ErrorPage.scss  Home.js  Home.scss  NewProposals.js  Portal.scss  ProfilePage.js  ProfilePage.scss  ProposalPage.js  ProposalPage.scss  Proposals.js  Proposals.scss  PublicAccount.js  SingleDeliverable.js  SingleProposal copy.js  SingleProposal.js
src/partials/: AccountInfo.js  ActiveProposals.js  AdminCategories.js  AdminDeliverables.js  AdminMenu.js  AdminRemoveAccount.js  AdminRole.js  AdminVoteDuration.js  ArchivedProposals.js  AssignedDeliverables.js  CarouselItem.js  CategoryListSingle.js  CompletedProposals.js  DeliverableGridSingle.js  DeliverablesInReview.js  (+27 more)
(+375 files in other folders)
